updates to ganglia, rubygems, syslog, unicorn, mogilefs, mysql, bluepill. add perl and mysql multi-master montior

--- a/templates/default/expires.conf.erb
+++ b/templates/default/expires.conf.erb
@@ -1,4 +1,4 @@
-if ($request_uri ~* "<%= @node[:nginx][:expires][:regex] %>") {
-    expires <%= @node[:nginx][:expires][:time] %>;
-    break;
+location ~ <%= @node[:nginx][:expires][:regex] %> {
+  expires <%= @node[:nginx][:expires][:time] %>;
+  break;
 }
